--- a/src/main/resources/templates/profile/profileSchoolStudent.html
+++ b/src/main/resources/templates/profile/profileSchoolStudent.html
@@ -37,8 +37,8 @@
     </div>
 
     <div class="section">
-        <h2>Дневник</h2>
-        <p><a href="#" class="link" id="diaryLink">Обзор дневника</a></p>
+        <h2>Расписание</h2>
+        <p><a href="#" class="link" id="diaryLink">Обзор расписания</a></p>
     </div>
 
     <div class="section">
@@ -57,7 +57,7 @@
     const id = urlParams.get('id');
 
     if (id) {
-        document.getElementById('diaryLink').href = `schoolStudentDiary?id=${id}`;
+        document.getElementById('diaryLink').href = `schoolStudentSchedule?id=${id}`;
         document.getElementById('parentLink').href = `parentPage?id=${id}`;
 
         fetch(`/findSchoolStudentById?id=${id}`)
