--- a/src/main/resources/templates/profile/profileTeacher.html
+++ b/src/main/resources/templates/profile/profileTeacher.html
@@ -46,8 +46,8 @@
     </div>
 
     <div class="section">
-        <h2>Учебные предметы</h2>
-        <p><a href="#" class="link" id="assignmentLink">Просмотр предметов</a></p>
+        <h2>Расписание</h2>
+        <p><a href="#" class="link" id="teacherSchedule">Просмотр расписания</a></p>
     </div>
 </div>
 
@@ -57,7 +57,7 @@
 
     if (id) {
         document.getElementById('classLink').href = `classPage?id=${id}`;
-        document.getElementById('assignmentLink').href = `assignmentPage?id=${id}`;
+        document.getElementById('teacherSchedule').href = `teacherSchedule?id=${id}`;
 
         fetch(`findTeacherById?id=${id}`)
             .then(response => {
