--- a/src/main/resources/templates/classGroups.html
+++ b/src/main/resources/templates/classGroups.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Группы</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/style/Header.css}">
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
         }
-
         .container {
             margin: 20px;
         }
-
         .groups-container {
             margin-top: 20px;
             overflow-x: auto;
@@ -22,7 +19,6 @@
             border-radius: 4px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
-
         .groups-grid {
             display: grid;
             min-width: fit-content;
@@ -217,10 +213,7 @@
     </style>
 </head>
 <body>
-<header>
-    <div class="school-name">Школа</div>
-    <button class="logout-button">Выйти</button>
-</header>
+<div th:replace="~{header}"></div>
 
 <div class="container">
     <h1>Распределение учащихся по группам</h1>
@@ -368,20 +361,6 @@
             });
         }
     });
-
-    document.querySelector('.logout-button').addEventListener('click', function() {
-        fetch('/logout', {
-            method: 'GET',
-            credentials: 'include'
-        })
-        .then(response => {
-            if (response.redirected) {
-                window.location.href = response.url;
-            }
-        })
-        .catch(error => console.error('Ошибка при выходе:', error));
-    });
-
 
 
     document.querySelector('.add-group-button').addEventListener('click', function() {
