--- a/src/main/resources/templates/profile/profileSchoolStudent.html
+++ b/src/main/resources/templates/profile/profileSchoolStudent.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Профиль</title>
     <link rel="stylesheet" type="text/css" th:href="@{/style/ProfileStyle.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{/style/Header.css}">
 </head>
 <body>
 
-<header>
-    <div class="school-name">Школа</div>
-    <button class="logout-button">Выйти</button>
-</header>
+<div th:replace="~{header}"></div>
 
 <div class="profile-header">
     <div class="profile-picture" id="profile-picture" onclick="uploadPhoto()"></div>
@@ -85,25 +81,11 @@
 
                 const classId = data.classRoom.id;
                 document.getElementById('classLink').href = `classPage?id=${classId}`;
-
             })
             .catch(error => {
                 console.error('There was a problem with the fetch operation:', error);
             });
     }
-
-    document.querySelector('.logout-button').addEventListener('click', function() {
-        fetch('/logout', {
-            method: 'GET',
-            credentials: 'include'
-        })
-        .then(response => {
-            if (response.redirected) {
-                window.location.href = response.url;
-            }
-        })
-        .catch(error => console.error('Ошибка при выходе:', error));
-    });
 
     function uploadPhoto() {
         const fileInput = document.createElement('input');
